feat: add more pages

--- a/group.html
+++ b/group.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Головна сторінка</title>
+    <title>Моя група</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,11 +35,10 @@
         </div>
         <nav class="main-menu">
             <ul>
-                <li><a href="#" class="current-page">Головна</a></li>
+                <li><a href="index.html">Головна</a></li>
                 <li><a href="biography.html">Про мене</a></li>
-                <li><a href="group.html">Моя група</a></li>
+                <li><a href="group.html" class="current-page">Моя група</a></li>
                 <li><a href="hobbies.html">Хобі</a></li>
-                <li><a href="interesting.html">Цікаве</a></li>
                 <li><a href="#">Галерея</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
@@ -48,33 +47,18 @@
 
     <div class="content-wrapper">
         <main class="main-content">
-            <section class="main-page-structure">
-                <h1>Заголовок сторінки</h1>
-
-                <div class="biography-short">
-                    <h2>Біографія</h2>
-                    <p>Короткий опис  біографії...</p>
-                    <a href="biography.html">Детальніше >></a>
+            <section class="group-detailed">
+                <h1>Моя група</h1>
+                <div class="group-info-content">
+                    <img src="група_фото1.jpg" alt="Фото групи 1" class="group-photo">
+                    <p>
+                        Текст
+                    </p>
+                    <img src="група_фото2.jpg" alt="Фото групи 2" class="group-photo">
+                    <p>
+                        Текст
+                    </p>
                 </div>
-
-                <div class="group-info-short">
-                    <h2>Моя група</h2>
-                    <p>Коротка інформація про групу...</p>
-                    <a href="group.html">Детальніше >></a>
-                </div>
-
-                <div class="hobbies-short">
-                    <h2>Хобі</h2>
-                    <p>Короткий опис  хобі...</p>
-                    <a href="hobbies.html">Детальніше >></a>
-                </div>
-
-                <div class="interesting-short">
-                    <h2>Цікаве</h2>
-                    <p>Короткий опис цікавих речей...</p>
-                    <a href="interesting.html">Детальніше >></a>
-                </div>
-
                 <div class="advertisement-block">
                     <h2>Рекламний блок</h2>
                     <div class="ad-item">Рекламний блок 1</div>
