--- a/index.html
+++ b/index.html
@@ -3,200 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Біографія</title>
+    <title>Головна сторінка</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
     <header class="site-header">
         <div class="header-left">
-            <img src="фото.jpg" alt="фото" class="personal-photo">
+            <img src="images/me!!!.jpg" alt="фото" class="personal-photo">
             <div class="personal-info">
                 <p>Тернопільський національний технічний університет ім. Івана Пулюя</p>
                 <p>Факультет ФІС</p>
                 <p>Кафедра комп'ютерних наук</p>
                 <p>Персональна сторінка</p>
-                <p>Андрухов Ігор Андрійович</p>
+                <p>Карпець Денис Юрійович</p>
                 <p>група CП-31</p>
             </div>
         </div>
         <div class="header-middle">
             <a href="https://tntu.edu.ua/" target="_blank">
-                <img src="логотип_тнту.png" alt="Логотип ТНТУ" class="logo tntu-logo">
+                <img src="images/tntu-logo.png" alt="Логотип ТНТУ" class="logo tntu-logo">
             </a>
         </div>
         <div class="header-right">
             <a href="#" target="_blank">
-                <img src="логотип_фіс.png" alt="Логотип ФІС" class="logo fis-logo">
+                <img src="images/fis-logo.jpg" alt="Логотип ФІС" class="logo fis-logo">
             </a>
             <a href="#" target="_blank">
-                <img src="логотип_кн.png" alt="Логотип КН" class="logo kn-logo">
+                <img src="images/kn-logo.png" alt="Логотип КН" class="logo kn-logo">
             </a>
         </div>
         <nav class="main-menu">
             <ul>
-                <li><a href="index.html">Головна</a></li>
-                <li><a href="biography.html" class="current-page">Про мене</a></li>
-                <li><a href="group.html">Моя група</a></li>
-                <li><a href="hobbies.html">Хоббі</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content-wrapper">
-        <main class="main-content">
-            <section class="biography-page">
-                <h1>Біографія</h1>
-                <div class="biography-container">
-                    <div class="enlarged-photo">
-                        <img src="збільшене_фото.jpg" alt="Збільшене фото" class="enlarged-img">
-                    </div>
-                    <div class="biography-text">
-                        <p>
-                            Текс
-                            <span style="display: inline-block; margin-right: 5px;"><img src="міні_фото1.jpg" alt="Міні фото 1" style="width: 50px; height: auto; vertical-align: middle;"></span>
-                            Продовження тексту біографії...
-                        </p>
-                        <p>
-                            Ще більше деталей та цікавих історій про вас...
-                            <span style="display: inline-block; margin-left: 5px;"><img src="міні_фото2.jpg" alt="Міні фото 2" style="width: 50px; height: auto; vertical-align: middle;"></span>
-                            ... і так далі.
-                        </p>
-                    </div>
-                </div>
-            </section>
-        </main>
-    </div>
-
-    <footer class="site-footer">
-        <p>&copy; 2025 Ігор</p>
-    </footer>
-</div>
-</body>
-</html>
-Group.html
-
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя група</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
-    <header class="site-header">
-        <div class="header-left">
-            <img src="фото.jpg" alt="фото" class="personal-photo">
-            <div class="personal-info">
-                <p>Тернопільський національний технічний університет ім. Івана Пулюя</p>
-                <p>Факультет ФІС</p>
-                <p>Кафедра комп'ютерних наук</p>
-                <p>Персональна сторінка</p>
-                <p>Андрухов Ігор Андрійович</p>
-                <p>група CП-31</p>
-            </div>
-        </div>
-        <div class="header-middle">
-            <a href="https://tntu.edu.ua/" target="_blank">
-                <img src="логотип_тнту.png" alt="Логотип ТНТУ" class="logo tntu-logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <a href="#" target="_blank">
-                <img src="логотип_фіс.png" alt="Логотип ФІС" class="logo fis-logo">
-            </a>
-            <a href="#" target="_blank">
-                <img src="логотип_кн.png" alt="Логотип КН" class="logo kn-logo">
-            </a>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Головна</a></li>
-                <li><a href="biography.html">Про мене</a></li>
-                <li><a href="group.html" class="current-page">Моя група</a></li>
-                <li><a href="hobbies.html">Хоббі</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content-wrapper">
-        <main class="main-content">
-            <section class="group-detailed">
-                <h1>Моя група</h1>
-                <div class="group-info-content">
-                    <img src="група_фото1.jpg" alt="Фото групи 1" class="group-photo">
-                    <p>
-                        Текст
-                    </p>
-                    <img src="група_фото2.jpg" alt="Фото групи 2" class="group-photo">
-                    <p>
-                        Текст
-                    </p>
-                </div>
-                <div class="advertisement-block">
-                    <h2>Рекламний блок</h2>
-                    <div class="ad-item">Рекламний блок 1</div>
-                    <div class="ad-item">Рекламний блок 2</div>
-                    <div class="ad-item">Рекламний блок 3</div>
-                </div>
-            </section>
-        </main>
-    </div>
-
-    <footer class="site-footer">
-        <p>&copy; Ігор</p>
-    </footer>
-</div>
-</body>
-</html>
-hobbies.html
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Хоббі</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
-    <header class="site-header">
-        <div class="header-left">
-            <img src="фото.jpg" alt="фото" class="personal-photo">
-            <div class="personal-info">
-                <p>Тернопільський національний технічний університет ім. Івана Пулюя</p>
-                <p>Факультет ФІС</p>
-                <p>Кафедра комп'ютерних наук</p>
-                <p>Персональна сторінка</p>
-                <p>Андрухов Ігор Андрійович</p>
-                <p>група CП-31</p>
-            </div>
-        </div>
-        <div class="header-middle">
-            <a href="https://tntu.edu.ua/" target="_blank">
-                <img src="логотип_тнту.png" alt="Логотип ТНТУ" class="logo tntu-logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <a href="#" target="_blank">
-                <img src="логотип_фіс.png" alt="Логотип ФІС" class="logo fis-logo">
-            </a>
-            <a href="#" target="_blank">
-                <img src="логотип_кн.png" alt="Логотип КН" class="logo kn-logo">
-            </a>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Головна</a></li>
+                <li><a href="#" class="current-page">Головна</a></li>
                 <li><a href="biography.html">Про мене</a></li>
                 <li><a href="group.html">Моя група</a></li>
-                <li><a href="hobbies.html" class="current-page">Хоббі</a></li>
+                <li><a href="hobbies.html">Хобі</a></li>
                 <li><a href="#">Галерея</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
@@ -205,27 +47,50 @@ hobbies.html
 
     <div class="content-wrapper">
         <main class="main-content">
-            <section class="hobbies-page">
-                <h1>Хоббі</h1>
-                <div class="hobbies-container">
-                    <div class="hobbies-columns">
-                        <div class="hobby-column">
-                            <h2>Хоббі 1</h2>
-                            <img src="хобі_фото1.jpg" alt="Фото хобі 1" class="hobby-photo">
-                            <p>Опис першого хобі...</p>
-                        </div>
-                        <div class="hobby-column">
-                            <h2>Хоббі 2</h2>
-                            <img src="хобі_фото2.jpg" alt="Фото хобі 2" class="hobby-photo">
-                            <p>Опис другого хобі...</p>
-                        </div>
-                        <div class="hobby-column">
-                            <h2>Хоббі 3</h2>
-                            <img src="хобі_фото3.jpg" alt="Фото хобі 3" class="hobby-photo">
-                            <p>Опис третього хобі...</p>
-                        </div>
+            <section class="main-page-structure">
+                <h1>Заголовок сторінки</h1>
+                <div class="main-grid">
+                    <div class="grid-item biography-short">
+                        <h2>Біографія</h2>
+                        <p>Короткий зміст біографії (1 речення)...</p>
+                        <a href="biography.html">Детальніше >></a>
                     </div>
-                    <div class="hobby-advertisement">
+                    <div class="grid-item group-info-short">
+                        <h2>Моя група</h2>
+                        <p>Короткий зміст про групу (1 речення)...</p>
+                        <a href="group.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item hobbies-short-1">
+                        <h2>Хоббі 1</h2>
+                        <p>Короткий опис хобі 1 (1 речення)...</p>
+                        <a href="hobbies.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item hobbies-short-2">
+                        <h2>Хоббі 2</h2>
+                        <p>Короткий опис хобі 2 (1 речення)...</p>
+                        <a href="hobbies.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item hobbies-short-3">
+                        <h2>Хоббі 3</h2>
+                        <p>Короткий опис хобі 3 (1 речення)...</p>
+                        <a href="hobbies.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item interesting-short-1">
+                        <h2>Цікаве 1</h2>
+                        <p>Короткий опис цікавого 1 (1 речення)...</p>
+                        <a href="interesting.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item interesting-short-2">
+                        <h2>Цікаве 2</h2>
+                        <p>Короткий опис цікавого 2 (1 речення)...</p>
+                        <a href="interesting.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item interesting-short-3">
+                        <h2>Цікаве 3</h2>
+                        <p>Короткий опис цікавого 3 (1 речення)...</p>
+                        <a href="interesting.html">Детальніше >></a>
+                    </div>
+                    <div class="grid-item advertisement-block">
                         <h2>Рекламний блок</h2>
                         <div class="ad-item">Рекламний блок 1</div>
                         <div class="ad-item">Рекламний блок 2</div>
@@ -237,211 +102,7 @@ hobbies.html
     </div>
 
     <footer class="site-footer">
-        <p>&copy; Ігор</p>
-    </footer>
-</div>
-</body>
-</html>
-index.html
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Головна сторінка</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
-    <header class="site-header">
-        <div class="header-left">
-            <img src="фото.jpg" alt="фото" class="personal-photo">
-            <div class="personal-info">
-                <p>Тернопільський національний технічний університет ім. Івана Пулюя</p>
-                <p>Факультет ФІС</p>
-                <p>Кафедра комп'ютерних наук</p>
-                <p>Персональна сторінка</p>
-                <p>Андрухов Ігор Андрійович</p>
-                <p>група CП-31</p>
-            </div>
-        </div>
-        <div class="header-middle">
-            <a href="https://tntu.edu.ua/" target="_blank">
-                <img src="логотип_тнту.png" alt="Логотип ТНТУ" class="logo tntu-logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <a href="#" target="_blank">
-                <img src="логотип_фіс.png" alt="Логотип ФІС" class="logo fis-logo">
-            </a>
-            <a href="#" target="_blank">
-                <img src="логотип_кн.png" alt="Логотип КН" class="logo kn-logo">
-            </a>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="#" class="current-page">Головна</a></li>
-                <li><a href="biography.html">Про мене</a></li>
-                <li><a href="group.html">Моя група</a></li>
-                <li><a href="hobbies.html">Хоббі</a></li>
-                <li><a href="interesting.html">Цікаве</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content-wrapper">
-        <main class="main-content">
-            <section class="main-page-structure">
-                <h1>Заголовок сторінки</h1>
-
-                <div class="biography-short">
-                    <h2>Біографія</h2>
-                    <p>Короткий опис  біографії...</p>
-                    <a href="biography.html">Детальніше >></a>
-                </div>
-
-                <div class="group-info-short">
-                    <h2>Моя група</h2>
-                    <p>Коротка інформація про  групу...</p>
-                    <a href="group.html">Детальніше >></a>
-                </div>
-
-                <div class="hobbies-short">
-                    <h2>Хоббі</h2>
-                    <p>Короткий опис  хобі...</p>
-                    <a href="hobbies.html">Детальніше >></a>
-                </div>
-
-                <div class="interesting-short">
-                    <h2>Цікаве</h2>
-                    <p>Короткий опис цікавих речей...</p>
-                    <a href="interesting.html">Детальніше >></a>
-                </div>
-
-                <div class="advertisement-block">
-                    <h2>Рекламний блок</h2>
-                    <div class="ad-item">Рекламний блок 1</div>
-                    <div class="ad-item">Рекламний блок 2</div>
-                    <div class="ad-item">Рекламний блок 3</div>
-                </div>
-            </section>
-        </main>
-    </div>
-
-    <footer class="site-footer">
-        <p>&copy;Ігор</p>
-    </footer>
-</div>
-</body>
-</html>
-interesting.html
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Цікаве</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
-    <header class="site-header">
-        <div class="header-left">
-            <img src="фото.jpg" alt="фото" class="personal-photo">
-            <div class="personal-info">
-                <p>Тернопільський національний технічний університет ім. Івана Пулюя</p>
-                <p>Факультет ФІС</p>
-                <p>Кафедра комп'ютерних наук</p>
-                <p>Персональна сторінка</p>
-                <p>Андрухов Ігор Андрійович</p>
-                <p>група CП-31</p>
-            </div>
-        </div>
-        <div class="header-middle">
-            <a href="https://tntu.edu.ua/" target="_blank">
-                <img src="логотип_тнту.png" alt="Логотип ТНТУ" class="logo tntu-logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <a href="#" target="_blank">
-                <img src="логотип_фіс.png" alt="Логотип ФІС" class="logo fis-logo">
-            </a>
-            <a href="#" target="_blank">
-                <img src="логотип_кн.png" alt="Логотип КН" class="logo kn-logo">
-            </a>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Головна</a></li>
-                <li><a href="biography.html">Про мене</a></li>
-                <li><a href="group.html">Моя група</a></li>
-                <li><a href="hobbies.html">Хоббі</a></li>
-                <li><a href="interesting.html" class="current-page">Цікаве</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content-wrapper">
-        <main class="main-content">
-            <section class="interesting-page">
-                <h1>Цікаве</h1>
-                <div class="interesting-item">
-                    <div class="interesting-image">
-                        <img src="цікаве_фото1.jpg" alt="Рисунок 1">
-                    </div>
-                    <div class="interesting-article">
-                        <h2>Стаття 1</h2>
-                        <p>
-                            Текст
-                        </p>
-                    </div>
-                </div>
-
-                <div class="interesting-item">
-                    <div class="interesting-image">
-                        <img src="цікаве_фото2.jpg" alt="Рисунок 2">
-                    </div>
-                    <div class="interesting-article">
-                        <h2>Стаття 2</h2>
-                        <p>
-                            Текст
-                        </p>
-                    </div>
-                </div>
-
-                <div class="interesting-item">
-                    <div class="interesting-image">
-                        <img src="цікаве_фото3.jpg" alt="Рисунок 3">
-                    </div>
-                    <div class="interesting-article">
-                        <h2>Стаття 3</h2>
-                        <p>
-                            Текст
-                        </p>
-                    </div>
-                </div>
-
-                <div class="interesting-item">
-                    <div class="interesting-image">
-                        <img src="цікаве_фото4.jpg" alt="Рисунок 4">
-                    </div>
-                    <div class="interesting-article">
-                        <h2>Стаття 4</h2>
-                        <p>
-                            Текс
-                        </p>
-                    </div>
-                </div>
-            </section>
-        </main>
-    </div>
-
-    <footer class="site-footer">
-        <p>&copy; Ігор</p>
+        <p>&copy; Персональний сайт Дениса Карпця</p>
     </footer>
 </div>
 </body>
