feat: add banner to index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
         </nav>
     </header>
 
+    <div class="banner">
+        <div class="background"></div>
+        <div class="text-container text-1">
+            <p>Здогадайтесь</p>
+        </div>
+        <div class="text-container text-2">
+            <p>яке своє фото</p>
+        </div>
+        <div class="text-container text-3">
+            <p>я люблю найбільше с:</p>
+        </div>
+        <img src="images/me!!!.jpg" alt="Анімація 1" class="animated-image image-1">
+        <img src="images/me!!!.jpg" alt="Анімація 2" class="animated-image image-2">
+        <img src="images/me!!!.jpg" alt="Анімація 3" class="animated-image image-3">
+    </div>
+
     <div class="content-wrapper">
         <main class="main-content">
             <section class="main-page-structure">
